# perflint

./: .pre-commit-hooks.yaml  .pylintrc  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: python-app.yml
perflint/: __init__.py  __main__.py  checker.py  comprehension_checker.py  for_loop_checker.py  list_checker.py  logging_checker.py
tests/: base.py  test_comprehension_checker.py  test_for.py  test_for_loop_checker.py  test_list.py  test_list_checker.py  test_logging_checker.py  test_loop_invariant.py
tests/functional/: async_usage.py  comprehensions.py  for_loop_checker.py  global_usage.py  lists.py  logging_formatting.py  loop_invariance.py  match_statements.py  memoryview_usage.py
